# om

./: .gitignore  CLAUDE.md  README.md  THESIS.md  pyproject.toml
.claude/: content.md  roadmap.md  structure.md
.claude-plugin/: marketplace.json
connections/: 01-society-of-thoughts.md
docs/: architecture-diagram.md
mcp/: README.md  config.json  server.py
paper/: darshana-inference-time-alignment.md  main.tex  references.bib
philosophy/: 01-vedas-structure-of-knowledge.md  02-samkhya-enumeration-of-reality.md  03-yoga-discipline-of-mind.md  04-nyaya-logic-and-epistemology.md  05-vaisheshika-atomism-and-categories.md  06-mimamsa-ritual-and-duty.md  07-vedanta-nature-of-brahman.md
plugin/: plugin.json
practices/: 01-bhakti-movement.md  02-tantra-and-shakta-traditions.md  03-modern-hindu-thought.md
reports/: autonomous-crane-project-plan.html  what-this-means.html  yaksha-palestine-analysis.html
sanskrit/: 01-basics-varnamala-dhatus.md  02-sandhi-sound-merging.md  03-vibhakti-eight-cases.md  04-lakaras-verb-system.md  05-sankhya-sarvanama-numbers-pronouns.md  06-reading-shlokas.md
src/: __init__.py  antahkarana.py  darshana_llm.py  darshana_router.py  demo.py  demo_antahkarana.py  demo_filter.py  demo_manas.py  demo_pratyaksha.py  demo_shakti.py  demo_smriti.py  guard.py  manas.py  pratyaksha.py  prompts.py  shakti.py  smriti.py  vritti_filter.py
tests/: benchmark_filter.py  benchmark_sycophancy.py  scan_models.py  score_sycophancy.py  test_filter.py
texts/: 01-isha-upanishad.md  02-kena-upanishad.md  03-katha-upanishad.md  04-mandukya-upanishad.md  05-chandogya-upanishad.md  06-gita-karma-yoga-ch1-6.md  07-gita-bhakti-yoga-ch7-12.md  08-gita-jnana-yoga-ch13-18.md  09-yoga-sutras-patanjali.md  (+3 more)
(+51 files in other folders)
