[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darshana"
version = "0.2.0"
description = "The Darshana Architecture — Hindu philosophical reasoning framework for AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Harshwardhan (HNG)" },
]
keywords = [
    "philosophy",
    "reasoning",
    "ai",
    "darshana",
    "hindu-philosophy",
    "cognitive-architecture",
    "llm",
    "epistemology",
    "prompt-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]
all = [
    "anthropic>=0.40.0",
]

[project.scripts]
darshana = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/aidgoc/om"
Repository = "https://github.com/aidgoc/om"
Documentation = "https://github.com/aidgoc/om#readme"
Issues = "https://github.com/aidgoc/om/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
